--- a/team14/src/components/post.css
+++ b/team14/src/components/post.css
@@ -1,189 +1,158 @@
 .post-card {
-
-  
-    margin: 0.625rem 0;
-    padding: 0.625rem;
-    justify-content: center;
-    
-    border-radius:0.313rem;
-
-    border: 1px solid #ccc;
-    margin: 10px 0;
-    padding: 10px;
-
+  margin: 0.625rem 0;
+  padding: 0.625rem;
+  justify-content: center;
+  border-radius: 0.313rem;
 }
 
 .profile-info {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .profile-picture {
-
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    margin-right: 0.625rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  margin-right: 0.625rem;
 }
 
 .post-content {
-    margin-top: 0.625rem;
-
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.post-content {
-    margin-top: 10px;
-
+  margin-top: 0.625rem;
 }
 
 .post-photo {
-    max-width: 100%;
-    height: auto;
-
-    margin-top: 0.652rem;
-
-    margin-top: 10px;
-
+  max-width: 100%;
+  height: auto;
+  margin-top: 0.652rem;
 }
 
 .interaction-buttons {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 button {
-
-    margin-right:0.652rem;
-    padding:0.313rem 0.652rem;
-
-    margin-right: 10px;
-    padding: 5px 10px;
-
-    cursor: pointer;
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-
-    border-radius: 0.25rem;
-
-    border-radius: 4px;
-
+  margin-right: 0.652rem;
+  padding: 0.313rem 0.652rem;
+  cursor: pointer;
+  background-color: #3498DB;
+  color: #fff;
+  border: none;
+  border-radius: 0.25rem;
 }
 
 button:hover {
-    background-color: #2980b9;
-
+  background-color: #2980B9;
 }
 
-*, *:before, *:after {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-  background-color:#e9ebee;
+  background-color: #e9ebee;
 }
 
 .f-card {
-   width: 33%;
-  background-color:white;
-  border-radius:0.188rem;
+  width: 33%;
+  background-color: white;
+  border-radius: 0.188rem;
   margin: auto;
   min-width: 350px;
-  margin-bottom:0.652rem;
-  padding:0.75rem; 
+  margin-bottom: 0.652rem;
+  padding: 0.75rem;
   border-radius: 0.625rem;
-  box-shadow: 0 0 0.313rem rgba(0, 0, 0, .30); 
+  box-shadow: 0 0 0.313rem rgba(0, 0, 0, .30);
 
-  .content{
+  .content {
     overflow-wrap: break-word;
   }
 }
 
 .header {
-  margin-bottom:1.063rem;
+  margin-bottom: 1.063rem;
 }
 
 .co-logo {
- 
-  float:left;
-  margin-right:0.5rem;
+  float: left;
+  margin-right: 0.5rem;
   border-radius: 50%;
-  width: 2.5em;;
-  height:2.5rem;
+  width: 2.5em;
+  ;
+  height: 2.5rem;
 }
 
-.co-name > a {
+.co-name>a {
   font-family: Helvetica;
-  font-size:0.875rem;
+  font-size: 0.875rem;
   font-weight: bold;
   line-height: 1.38;
   color: #365899;
-  text-decoration:none;
-  
-  margin-bottom:0.125rem;
+  text-decoration: none;
+  margin-bottom: 0.125rem;
 }
 
-.co-name > a:hover {
-  text-decoration:underline;
+.co-name>a:hover {
+  text-decoration: underline;
 }
 
 .time {
   font-family: Helvetica;
-  font-size:0.75rem;
-  color: #90949c;
+  font-size: 0.75rem;
+  color: #90949C;
 }
 
-.time > a {
-  color: #90949c;
-  text-decoration:none;
+.time>a {
+  color: #90949C;
+  text-decoration: none;
 }
 
-.time > a:hover {
-  text-decoration:underline;
+.time>a:hover {
+  text-decoration: underline;
 }
 
 .options {
   font-family: Helvetica;
-  font-size:0.75rem;
-  color: #e5e5e5;
-  float:right;
+  font-size: 0.75rem;
+  color: #E5E5E5;
+  float: right;
 }
 
 .options:hover {
-  color: black; 
+  color: black;
   color: rgba(0, 0, 0, .30);
 }
 
 .content {
-  clear:both;
+  clear: both;
   font-family: Helvetica, sans-serif;
-  font-size:0.875rem;
+  font-size: 0.875rem;
   line-height: 1.38;
 }
 
 .reference {
-  width:476px;
+  width: 476px;
 }
+
 .reference-thumb {
-  display:block;
-  width:29.75rem;
-  height:15.563rem;
+  display: block;
+  width: 29.75rem;
+  height: 15.563rem;
 }
 
 .reference-content {
   border: 0.125rem solid black;
   border: 0.125rem solid rgba(0, 0, 0, .1);
   border-top: 0;
-  padding:0.625rem 0.75rem 0.625rem 0.75rem;
+  padding: 0.625rem 0.75rem 0.625rem 0.75rem;
 }
 
 .reference:hover .reference-content {
-  border-color: black; 
+  border-color: black;
   border-color: rgba(0, 0, 0, .15);
 }
 
@@ -192,55 +161,49 @@ body {
   font-size: 1.125rem;
   font-weight: 500;
   line-height: 1.375rem;
-  
-  margin-bottom:0.313rem;
+  margin-bottom: 0.313rem;
 }
 
 .reference-subtitle {
   font-family: Helvetica;
-  font-size:0.75rem;
-  line-height: 1rem; 
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .reference-font {
-  color: #90949c;
+  color: #90949C;
   font-family: Helvetica;
   font-size: 0.688rem;
   line-height: 0.688rem;
   text-transform: uppercase;
-
-  padding-top:0.563rem; 
+  padding-top: 0.563rem;
 }
 
 .social {
-  margin-top:0.75rem;
+  margin-top: 0.75rem;
 }
+
 .social-buttons {
-  color: #7f7f7f;
+  color: #7F7F7F;
   font-family: Helvetica;
-  font-size:0.75rem;
-  font-weight:bold;
-  line-height:0.875rem;
-  
-  border-top:0.063rem solid #e5e5e5;
-  padding-top:0.25rem;
-  
+  font-size: 0.75rem;
+  font-weight: bold;
+  line-height: 0.875rem;
+  border-top: 0.063rem solid #E5E5E5;
+  padding-top: 0.25rem;
 }
 
 .social-buttons span {
   font-size: 0.75rem;
-  margin-right:1.25rem;
-  padding:0.25rem 0.25rem 0.25rem 0;
+  margin-right: 1.25rem;
+  padding: 0.25rem 0.25rem 0.25rem 0;
 }
 
 .social-buttons span:hover {
-  text-decoration:underline;
-  cursor:pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .social-buttons span i {
-  padding-right:0.25rem;
+  padding-right: 0.25rem;
 }
-
-}
-
