--- a/team14/src/components/post.css
+++ b/team14/src/components/post.css
@@ -33,16 +33,29 @@
 }
 
 
-.comment-container {
+/*.comment-container {
     width: 33%;
-  background-color: lightgray;
-border-radius: 15px;
-  margin: auto;
-  min-width: 350px;
-  margin-bottom:0.652rem;
-  padding:0.75rem; 
-
-  box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
+    background-color: rgb(204, 198, 198);
+  border-radius: 15px;
+    border-radius:0.188rem;
+    margin: auto;
+    min-width: 350px;
+    margin-bottom:0.652rem;
+    padding:0.75rem; 
+  
+    box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
+}*/
+.commentarea{
+    width: 33%;
+    height: fit-content;
+    background-color: lightgray;
+  border-radius: 15px;
+    margin: auto;
+    min-width: 350px;
+    margin-bottom:0.652rem;
+    padding:0.75rem; 
+  
+    box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
 }
 
 .commentText{
@@ -50,7 +63,7 @@ border-radius: 15px;
   overflow-wrap: break-word;
 }
 .commentcss{
-    width: 33%;
+    width: 38.33%;
     margin: auto;
     max-width: 100%;
     resize: vertical;
@@ -73,8 +86,8 @@ border-radius: 15px;
      display: inline-block;
      align-items: center;
 position: relative;
-top: -2rem;
-left: 0.4rem;
+top: -3rem;
+left: 0.3rem;
 }
 
 .userphoto{
@@ -84,29 +97,31 @@ left: 0.4rem;
     display: flex;
     position: relative;
     right: 3.5rem;
+    bottom: 0.6rem;
   
 
+}
+.commentButton{
+    margin-left: 33.5%;
+    position: relative;
+    left: 9.5rem;
+    bottom: 2rem; ;
+}
+.timing{
+    display: flex;
+    font-size: small;
+    color: gray;
+    position: relative;
+    top: -4rem;
+    left: 1rem;
 }
 
 
 .commentText{
-    
+    position: relative;
 margin-left: 15px;
+bottom: 3rem;
 }
-
-
-
-
-.likeComment{
-    background-color: transparent;
-    color:gray;
-    border-radius: 15px;
-    display: inline-block;
-   position: relative;
-  left: 5%;
-}
-
-
 
 
 
@@ -115,12 +130,24 @@ margin-left: 15px;
 }
 
 button {
+    background-color: transparent;
+    color: gray;
     margin-right: 10px;
     padding: 5px 10px;
     cursor: pointer;
-    background-color: #3498db;
-    color: #fff;
     border: none;
     border-radius: 4px;
-}
+    position: relative;
+    
 
+}
+.likeComment{
+    background-color: transparent;
+    color:gray;
+    border-radius: 15px;
+    display: inline-block;
+   position: relative;
+  left: 31%;
+  top: -0.75rem;
+
+}
