--- a/team14/src/components/Createpost.css
+++ b/team14/src/components/Createpost.css
@@ -3,140 +3,140 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 body {
-    background-color: #F0F2F5;
-    font-family: Arial, sans-serif;
+  background-color: #eff2f7;
+  font-family: Arial, sans-serif;
 }
 
 .big {
-    display: flex;
-    justify-content: center;
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    width: 100%;
-    max-width: 1200px;
-    /* Adjust the maximum width as needed */
-    margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  width: 100%;
+  max-width: 1200px;
+
+  margin: 0 auto;
 }
 
 .post-box {
-    background-color: #fff;
-    border-radius: 0.625rem;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
-    padding: 1.25rem;
-    margin: 1.25rem auto;
-    max-width: 31.25rem;
+  background-color: #fff;
+  border-radius: 0.625rem;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
+  padding: 1.25rem;
+  margin: 1.25rem auto;
+  max-width: 31.25rem;
 }
 
 .post-box .user-image {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    margin-right: 0.625rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  margin-right: 0.625rem;
 }
 
 .post-input {
-    border: none;
-    box-shadow: none;
-    margin-left: 0.625rem;
-    font-size: 1rem;
+  border: none;
+  box-shadow: none;
+  margin-left: 0.625rem;
+  font-size: 1rem;
 }
 
 .post-input::placeholder {
-    color: #606770;
+  color: #606770;
 }
 
 .post-input:focus {
-    border-color: inherit;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .action-buttons {
-    gap: 0.7rem;
+  gap: 0.7rem;
 }
 
 .action-buttons .btn {
-    font-size: 0.875rem;
-    color: #606770;
-    background-color: #F0F2F5;
-    border: none;
-    padding: 7px;
-    height: fit-content;
+  font-size: 0.875rem;
+  color: #606770;
+  background-color: #f0f2f5;
+  border: none;
+  padding: 7px;
+  height: fit-content;
 }
 
 .action-buttons .btn i {
-    margin-right: 0.313rem;
+  margin-right: 0.313rem;
 }
 
 .more-options {
-    color: #606770;
-    font-size: 1.5rem;
-    cursor: pointer;
+  color: #606770;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 .bi-calendar2-event-fill {
-    color: #D6293E;
+  color: #d6293e;
 }
 
 .fa-smile {
-    color: #f7c32e;
+  color: #f7c32e;
 }
 
 .bi-camera-reels-fill {
-    color: rgba(var(--bs-info-rgb));
+  color: rgba(var(--bs-info-rgb));
 }
 
 .bi-image-fill {
-    color: rgba(12, 188, 135);
+  color: rgba(12, 188, 135);
 }
 
 .sharepost .btn-lg {
-    font-size: 0.625rem;
-    font-weight: bold;
-    text-align: center;
-    padding-right: 2.75rem;
-    width: 1.875rem;
-    height: 1.875rem;
+  font-size: 0.625rem;
+  font-weight: bold;
+  text-align: center;
+  padding-right: 2.75rem;
+  width: 1.875rem;
+  height: 1.875rem;
 }
 
 .sharepost {
-    padding-left: 25.313rem;
+  padding-left: 25.313rem;
 }
 
 .post-button {
-    border: 0px;
-    border-radius: 0.4em;
-    padding: 7px;
-    text-transform: capitalize;
+  border: 0px;
+  border-radius: 0.4em;
+  padding: 7px;
+  text-transform: capitalize;
 }
 
 .post-button:disabled {
-    cursor: not-allowed;
-    color: rgba(var(--bs-info-rgb));
-    background-color: rgba(12, 188, 135, 0.1);
+  cursor: not-allowed;
+  color: rgba(var(--bs-info-rgb));
+  background-color: rgba(12, 188, 135, 0.1);
 }
 
 .post-button:not(:disabled) {
-    color: #fff !important;
-    background-color: rgba(var(--bs-info-rgb)) !important;
-    border-color: rgba(var(--bs-info-rgb)) !important;
-    cursor: pointer;
+  color: #fff !important;
+  background-color: rgba(var(--bs-info-rgb)) !important;
+  border-color: rgba(var(--bs-info-rgb)) !important;
+  cursor: pointer;
 }
 
 .background-gray {
-    --bs-bg-opacity: 1;
-    background-color: rgba(238, 240, 242, var(--bs-bg-opacity)) !important;
+  --bs-bg-opacity: 1;
+  background-color: rgba(238, 240, 242, var(--bs-bg-opacity)) !important;
 }
 
 @media only screen and (min-width: 768px) {
-    .post-card .f-card {
-        width: 33%;
-    }
+  .post-card .f-card {
+    width: 33%;
+  }
 }
 
 @media (max-width: 767px) {
-    .post-card .f-card {
-        width: 100%;
-    }
+  .post-card .f-card {
+    width: 100%;
+  }
 }
