--- a/team14/src/components/post.css
+++ b/team14/src/components/post.css
@@ -163,21 +163,18 @@ button {
   left: 31%;
   top: -0.75rem;
 
-
+}
 
 button:hover {
 
     background-color: #2980b9;
 }
 
-
+/* =================  */
 #replybutton{
     position: relative;
-     
-
-
-    margin-left: 5px ;
-    
+    left: 6rem ;
+    top: -2rem;
     background-color: rgb(241, 240, 240);
     color: gray;
     border: none;
@@ -209,7 +206,6 @@ button:hover {
     {
 
         position: fixed;
-       
         display: flex;
           flex-direction: column;
         float: left;
@@ -222,10 +218,8 @@ button:hover {
         position: relative;
         top:300px;
         display: flex;
-          flex-direction: column;
-        
-
-
+        flex-direction: column;
+      
     }
 
 
@@ -238,7 +232,7 @@ position: absolute;
 
     #textt{
 
-  display: flex;
+             display: flex;
         padding: 10px;
         font-size: 15px;
         border: none;
@@ -247,7 +241,7 @@ position: absolute;
         height: 50px;
         outline: none;
         width: 90%;
-  display: inline-block;
+         
           margin-left: 20px ;
           margin-top: 10px;
           resize: none;
@@ -255,19 +249,18 @@ position: absolute;
   }
   
   .Replyy{
- 
- display: flex;
- height: 120px;
-  width: 33%;
-  background-color: lightgray;
-border-radius: 15px;
-  
-  margin: auto;
-  min-width: 350px;
-  margin-bottom:0.652rem;
-  padding:0.75rem; 
-  
-  box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
+ position: relative;
+ top: 10px;
+   display: flex;
+   height: 100px;
+   width: 33%;
+   background-color: lightgray;
+    border-radius: 15px;
+   margin: auto;
+   min-width: 300px;
+   margin-bottom:0.652rem;
+   padding:0.75rem; 
+   box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
   
 
   }
@@ -277,18 +270,17 @@ border-radius: 15px;
   
 
 
-width: 33%;
+  width: 33%;
   background-color: lightgray;
-border-radius: 15px;
+  border-radius: 15px;
   height: 20%;
   margin: auto;
-  min-width: 350px;
+  min-width: 300px;
   margin-bottom:2.5rem;
   padding:0.75rem; 
-  
   box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
-padding-bottom: -4rem;
-padding-top: -2rem;
+  padding-bottom: -4rem;
+  padding-top: 5rem;
   }
   
   .content{
@@ -327,13 +319,6 @@ padding-top: -2rem;
   
   
   
-  #Reactions1{
-  
-      position: fixed;
-  
-     top: 140px;
-  
-  }
 
   #like{
 
@@ -343,7 +328,8 @@ padding-top: -2rem;
    position: relative;
    left: 5%;
     margin-top: 0rem;
-    bottom: -4rem;
+    margin-bottom: 2rem;
+    bottom: -2.5rem;
   }
 
 
@@ -355,8 +341,8 @@ padding-top: -2rem;
     display: inline-block;
     position: relative;
     left: 20%;
-    bottom: -1.9rem;
-
+    bottom: 1rem;
+    margin-bottom: 0.5rem;
   }
 
 
@@ -371,17 +357,17 @@ padding-top: -2rem;
 
   .post-comments{
 
-position: relative;
+ position: relative;
 
 
-top: 10px;
+ top: 10px;
 
   }
 
   .comment1{
 
     position: relative;
-left: 20px;
+     left: 20px;
 
 
   }
@@ -390,17 +376,18 @@ left: 20px;
     
 
 display: flex;
-font-size: small;
+font-size:small;
 color: gray;
 
   }
 
   .reply-card{
 
-
+    
+   width: 100%;
     position: relative;
-    top: 40px;
-    left: 70px;
+    top: 50px;
+    
 
   }
 
@@ -408,16 +395,15 @@ color: gray;
   #ProfileReply{
 
 margin-left: 10px;
-margin-bottom:40px;
-height: 10%;
-margin-bottom: 5rem;
-margin-top: -2rem;
+height: 50%;
+margin-bottom: 7rem;
   }
  
 
   .ProfilePic{
     display: flex;
     position: relative;
+    top: -4rem;
     right: 3.5rem;
     display: flex;
   width: 10px;
@@ -426,26 +412,33 @@ margin-top: -2rem;
 #Activity{
 
   margin-top: -5rem;
-  margin-bottom: -1rem;
- 
+  margin-bottom: 1rem;
+}
   
+
+.profile-name{
+
+position: relative;
+
+top: -6rem;
+right: 5px;
+
+
+
 }
   .DisplayforText{
 
-height: 20%;
-margin-top: -3rem;
-padding-bottom: 20px;
-overflow-wrap: break-word;
+    height: 20%;
+    margin-top: -10rem;
+    overflow-wrap: break-word;
     word-wrap: break-word;
     width: 100%;
-    margin-left: 0.25rem;
+    margin-left: 0rem;
   }
   
-=======
-  background-color: #2980B9;
-}
 
-*,
+ /* =================  */
+
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
