--- a/team14/src/components/post.css
+++ b/team14/src/components/post.css
@@ -1,14 +1,12 @@
 .post-card {
 
-    border: 1px solid #ccc;
-    
-   
-
+width:100%;
   margin: 0.625rem 0;
   padding: 0.625rem;
   justify-content: center;
   border-radius: 0.313rem;
-
+ margin-top: 20px;
+ 
 }
 
 .profile-info {
@@ -25,12 +23,15 @@
 
 .post-content {
   margin-top: 0.625rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .post-photo {
   max-width: 100%;
   height: auto;
   margin-top: 0.652rem;
+  
 }
 
 .commentText{
@@ -441,7 +442,7 @@ overflow-wrap: break-word;
     margin-left: 0.25rem;
   }
   
-=======
+
   background-color: #2980B9;
 }
 
@@ -622,4 +623,9 @@ body {
     text-transform: none;
     vertical-align: -0.125em;
 
+}
+
+.post-photo{
+  border-radius:0.4rem;
+  vertical-align: middle;
 }
