--- a/team14/src/components/Createpost.css
+++ b/team14/src/components/Createpost.css
@@ -2,34 +2,33 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
-body {
+/*body {
   background-color: #eff2f7;
   font-family: Arial, sans-serif;
 }
-
+*/
 .big {
-    display: flex;
-    justify-content: center;
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    width: 100%;
-    max-width: 1200px;
-    /* Adjust the maximum width as needed */
-   /* margin: 0 auto;*/
-    margin-bottom: 25px;
-    
+  display: flex;
+  justify-content: center;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  width: 100%;
+  max-width: 1200px;
+  /* Adjust the maximum width as needed */
+  /* margin: 0 auto;*/
+  margin-bottom: 25px;
 }
 
 .post-box {
-    background-color: #fff;
-    border-radius: 0.625rem;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
-    padding: 1.25rem;
-    margin: 1.25rem 0px;
-    width: 100%;
-    /*max-width: 31.25rem;*/
-    margin-top: 12px;
+  background-color: #fff;
+  border-radius: 0.625rem;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
+  padding: 1.25rem;
+  margin: 1.25rem 0px;
+  width: 100%;
+  /*max-width: 31.25rem;*/
+  margin-top: 12px;
 }
 
 .post-box .user-image {
@@ -109,11 +108,11 @@ body {
 }
 
 .post-button {
-    border: 0px;
-    border-radius: 0.4em;
-    padding: 7px;
-    text-transform: capitalize;
-    margin-left: auto;
+  border: 0px;
+  border-radius: 0.4em;
+  padding: 7px;
+  text-transform: capitalize;
+  margin-left: auto;
 }
 
 .post-button:disabled {
@@ -135,9 +134,9 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
-    .post-card .f-card {
-        width: 100%;
-    }
+  .post-card .f-card {
+    width: 100%;
+  }
 }
 
 @media (max-width: 767px) {
