--- a/team14/src/components/post.css
+++ b/team14/src/components/post.css
@@ -1,12 +1,10 @@
 .post-card {
-
-width:100%;
+  width: 100%;
   margin: 0.625rem 0;
   padding: 0.625rem;
   justify-content: center;
   border-radius: 0.313rem;
- margin-top: 20px;
- 
+  margin-top: 20px;
 }
 
 .profile-info {
@@ -32,96 +30,95 @@ width:100%;
   height: auto;
   margin-top: 0.652rem;
 }
-.typingcomment{
+.typingcomment {
   display: flex;
   flex-wrap: nowrap;
 }
 
-
+/*.comment-container {
+       display: flex;
+       width: 33%;
+       margin-bottom: 5px;
+       flex-wrap: nowrap;
+       box-sizing: border-box;
+    max-width: 100%;
+    word-wrap: break-word;
+      overflow-wrap: break-word;
+      min-width: 100%;
+      flex-shrink: 0;
+      position: relative;
+      transition: none;
+  }*/
 .comment-container {
-     display: flex;
-     width: 100%;
-     margin-bottom: 5px;
-     flex-wrap: nowrap;
-     box-sizing: border-box;
+  display: flex;
+  width: 100%;
+  margin-bottom: 5px;
+  flex-wrap: nowrap;
+  box-sizing: border-box;
   max-width: 100%;
   word-wrap: break-word;
-    overflow-wrap: break-word;
-  
+  overflow-wrap: break-word;
 }
 
-
-
-
-.commentarea{
-  width: 100%;
-    background-color: rgb(204, 198, 198);
-    border-radius: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    height: fit-content;
-    margin-bottom: 18px;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-
-
+.commentarea {
+  width: 92%;
+  background-color: #eef0f2;
+  border-radius: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  height: fit-content;
+  margin-bottom: 18px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  min-height: 100%;
+  min-width: 88%;
 }
 
-
-.commentcss{
-    width: 90%;
-    margin: auto;
-    max-width: 100%;
-    resize: vertical;
-    background-color: lightgrey;
-    border-radius: 5px;
-    border: none;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 5px;
-    margin-left: 5px;
-    margin: auto;
-
+.commentcss {
+  width: 90%;
+  margin: auto;
+  max-width: 100%;
+  resize: vertical;
+  background-color: #eef0f2;
+  border-radius: 5px;
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  margin: auto;
 }
 
-  
-  
-
-.user-name{
-    font-weight: bold;
-    margin-left: 5px;
-    margin-top: 0.7rem;
-     
+.user-name {
+  font-weight: bold;
+  margin-left: 5px;
+  margin-top: 0.7rem;
 }
 
-.userphoto{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: inline-block;
-    margin-right: 5px;
- 
+.userphoto {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 5px;
 }
-.commentButton{
-    float: right;
-    position: relative;
-    top: -2rem;
+.commentButton {
+  float: right;
+  position: relative;
+  top: -2rem;
 }
-.timing{
+.timing {
   margin-top: 1.6rem;
   margin-left: -2.8rem;
 }
 
-
-.commentText{
+.commentText {
   width: 100%;
-   word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    margin-left: 0.5rem;
-   margin-top: 1rem;
-      
-
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  margin-left: 0.5rem;
+  margin-top: 1rem;
 }
 
 .interaction-buttons {
@@ -132,7 +129,6 @@ button {
 
   position: relative;
 
-
   margin-right: 0.652rem;
   padding: 0.313rem 0.652rem;
   cursor: pointer;
@@ -140,40 +136,27 @@ button {
   color: #fff;
   border: none;
   border-radius: 0.25rem;
-
 }
-/*.likeComment {
+.likeComment {
   background-color: transparent;
   color: gray;
   border-radius: 15px;
   display: inline-block;
-  position: absolute;
-  top: -0.75rem;
-
-}*/
-.likeComment{
-  
-  background-color: transparent;
-  color:gray;
-position: absolute;
-
+  position: relative;
+  bottom: -1.2rem;
 }
-
 
 button:hover {
   background-color: #2980b9;
 }
 
 /* =================  */
-#replybutton{
-    position: relative;
-    left: 6rem ;
-    top: -2rem;
-    background-color: rgb(241, 240, 240);
-    color: gray;
-    border: none;
+#replybutton {
+  position: relative;
+  left: 1rem;
+  top: 1.2rem;
 
- color:rgb(161, 161, 236) ;
+  border: none;
 }
 
 #replybutton:hover {
@@ -192,99 +175,89 @@ button:hover {
   color: rgb(122, 122, 221);
 }
 
+.ReplySection1 {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  float: left;
+}
 
-    .ReplySection1
-    {
+.RepliedSection {
+  position: relative;
+  top: 300px;
+  display: flex;
+  flex-direction: column;
+}
 
-        position: fixed;
-        display: flex;
-          flex-direction: column;
-        float: left;
+#LoadMore {
+  position: absolute;
+}
 
-    }
+#textt {
+  display: flex;
+  padding: 10px;
+  font-size: 15px;
+  border: none;
+  background-color: #eef0f2;
+  color: rgb(8, 8, 8);
+  height: 50px;
+  outline: none;
+  width: 90%;
 
-    .RepliedSection
-    {
+  margin-left: 20px;
+  margin-top: 10px;
+  resize: none;
+}
 
-        position: relative;
-        top:300px;
-        display: flex;
-        flex-direction: column;
-      
-    }
-
-
-    #LoadMore
-    {
-
-
-position: absolute;
-    }
-
-    #textt{
-
-             display: flex;
-        padding: 10px;
-        font-size: 15px;
-        border: none;
-        background-color: lightgray;
-        color: rgb(8, 8, 8);
-        height: 50px;
-        outline: none;
-        width: 90%;
-         
-          margin-left: 20px ;
-          margin-top: 10px;
-          resize: none;
-          
-  }
-  
-  .Replyy{
- position: relative;
- top: 10px;
-   display: flex;
-   height: 100px;
-   width: 33%;
-   background-color: lightgray;
-    border-radius: 15px;
-   margin: auto;
-   min-width: 300px;
-   margin-bottom:0.652rem;
-   padding:0.75rem; 
-   box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
-  
-
-  }
-  
-
-  .PostedReplyy{
-  
-
-
+.Replyy {
+  position: relative;
+  right: 40rem;
+  bottom: -10rem;
+  display: flex;
+  height: 100px;
   width: 33%;
-  background-color: lightgray;
+  background-color: #eef0f2;
   border-radius: 15px;
-  border-radius: 15px;
-  height: 20%;
   margin: auto;
   min-width: 300px;
-  margin-bottom:2.5rem;
-  padding:0.75rem; 
+  margin-bottom: 0.652rem;
+  padding: 0.75rem;
   box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
-  padding-bottom: -4rem;
+}
+
+#Replysection {
+  margin-left: -5rem;
+  margin-bottom: 10rem;
+  width: 33%;
+  min-width: auto;
+  padding: 0;
+}
+
+.PostedReplyy {
+  display: flex;
+  position: relative;
+  float: left;
+  width: 47rem;
+
+  height: 7rem;
+  top: 10rem;
+  right: 40rem;
+  background-color: #eef0f2;
+  border-radius: 15px;
+  margin: auto;
+  min-width: 300px;
+  padding: 0.75rem;
+  box-shadow: 0 0 0.313rem rgba(138, 136, 136, 0.3);
+  padding-bottom: -5rem;
   padding-top: 5rem;
-  }
-  
-  .content{
+}
 
-
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    width: 100%;
-    
-  }
-  .PIC
-  {
+.content {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  width: 100%;
+}
+.PIC {
   float: left;
   margin-left: 10px;
   margin-top: 10px;
@@ -301,102 +274,77 @@ position: absolute;
   border-radius: 15px;
   border: none;
   margin-top: 20px;
-  }
-  .POST:hover{
-  
-      color: rgb(58, 189, 233);
-  }
-  
-  
-  
-  
+}
+.POST:hover {
+  color: rgb(58, 189, 233);
+}
 
-  #like{
+#like {
+  position: relative;
+  background-color: transparent;
+  color: gray;
+  border-radius: 15px;
+  position: relative;
+  right: 39rem;
+  top: 10.45rem;
+  margin-top: 0rem;
+  margin-bottom: 2rem;
+  bottom: -2.5rem;
+}
 
-    background-color: transparent;
-    color:gray;
-    border-radius: 15px;
-   position: relative;
-   left: 5%;
-    margin-top: 0rem;
-    margin-bottom: 2rem;
-    bottom: -2.5rem;
-  }
+#REPLY {
+  background-color: transparent;
+  color: gray;
+  border-radius: 15px;
+  display: inline-block;
+  position: relative;
+  right: 35rem;
+  top: 7rem;
+  margin-bottom: 0.5rem;
+}
 
+#REPLY:hover {
+  color: rgb(61, 176, 214);
+}
+#like:hover {
+  color: rgb(61, 176, 214);
+}
 
-  #REPLY{
+.post-comments {
+  position: relative;
 
-    background-color: transparent;
-    color:gray;
-    border-radius: 15px;
-    display: inline-block;
-    position: relative;
-    left: 20%;
-    bottom: 1rem;
-    margin-bottom: 0.5rem;
-  }
+  top: 10px;
+}
 
+.comment1 {
+  position: relative;
+  left: 20px;
+}
 
- 
+#TimeE {
+  display: flex;
+  font-size: small;
+  color: gray;
+}
 
- 
- 
+.reply-card {
+  width: 100%;
+  position: relative;
+  top: 50px;
+}
 
+#ProfileReply {
+  margin-left: 10px;
+  height: 50%;
+  margin-bottom: 7rem;
+}
 
-  #REPLY:hover{ color: rgb(61, 176, 214);  }
-  #like:hover{ color: rgb(61, 176, 214);  }
-
-  .post-comments{
-
- position: relative;
-
-
- top: 10px;
-
-  }
-
-  .comment1{
-
-    position: relative;
-     left: 20px;
-
-
-  }
-
-  #TimeE{
-    
-
-display: flex;
-font-size:small;
-color: gray;
-
-  }
-
-  .reply-card{
-
-    
-   width: 100%;
-    position: relative;
-    top: 50px;
-    
-
-  }
-
-
-  #ProfileReply{
-
-margin-left: 10px;
-height: 50%;
-margin-bottom: 7rem;
-  }
- 
-
-  .ProfilePic{
-    display: flex;
-    position: relative;
-    top: -4rem;
-    right: 3.5rem;
-    display: flex;
+.ProfilePic {
+  display: flex;
+  position: relative;
+  top: -5rem;
+  right: 3.5rem;
+  display: flex;
   width: 10px;
 }
 
@@ -404,31 +352,26 @@ margin-bottom: 7rem;
   margin-top: -5rem;
   margin-bottom: 1rem;
 }
-  
 
-.profile-name{
+.profile-name {
+  position: relative;
 
-position: relative;
-
-top: -6rem;
-right: 5px;
-
-
-
+  right: 40rem;
+  top: 3.5rem;
 }
-  .DisplayforText{
+.DisplayforText {
+  position: relative;
+  top: 7.5rem;
+  right: 39rem;
+  height: 20%;
+  margin-top: -10rem;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  width: 100%;
+  margin-left: 0rem;
+}
 
-    height: 20%;
-    margin-top: -10rem;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    width: 100%;
-    margin-left: 0rem;
-  }
-  
-
-
- /* =================  */
+/* =================  */
 
 *:before,
 *:after {
@@ -438,9 +381,9 @@ right: 5px;
 }
 
 /*body {
-  background-color: #e9ebee;
-}
-*/
+    background-color: #e9ebee;
+  }
+  */
 
 .f-card {
   width: 33%;
@@ -609,7 +552,7 @@ right: 5px;
   vertical-align: -0.125em;
 }
 
-.post-photo{
-  border-radius:0.4rem;
+.post-photo {
+  border-radius: 0.4rem;
   vertical-align: middle;
 }
